fix: removed layout shift on user and example pages caused by height:100%

--- a/client/styles/components/_nav.scss
+++ b/client/styles/components/_nav.scss
@@ -16,7 +16,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 100%;
   align-items: center;
 
   @include themify() {
